<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_charge</name>
  <version>0.0.0</version>
  <description>The turtlebot3_charge package</description>
  <maintainer email="josh@todo.todo">josh</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>laser_filters</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <export>
  </export>
</package>
